# jan

./: package.json
.github/ISSUE_TEMPLATE/: bug_report.md
core/src/: index.ts  process.ts
core/src/api/: index.ts
core/src/extensions/ai-engines/: AIEngine.ts  LocalOAIEngine.ts  RemoteOAIEngine.ts
docs/docs/handbook/06-engineering-excellence/: 02-jan-choices.mdx
docs/src/containers/Footer/: index.js
docs/src/pages/: index.js
electron/: main.ts  package.json
electron/handlers/: process.ts
extensions/inference-nitro-extension/src/node/: index.ts
extensions/model-extension/: package.json
server/: package.json
tauri/: Cargo.toml  build.rs  package.json  tauri.conf.json
tauri/src/: main.rs
web/containers/Providers/: EventHandler.tsx
web/extension/: ExtensionManager.ts
web/hooks/: useActiveModel.ts  useCreateNewThread.ts  useSendChatMessage.ts
web/screens/Chat/ErrorMessage/: index.tsx
